fixed login header alignment

--- a/micro-ui/web/micro-ui-internals/packages/css/src/pages/employee/login.scss
+++ b/micro-ui/web/micro-ui-internals/packages/css/src/pages/employee/login.scss
@@ -245,6 +245,10 @@
       text-align: center;
       margin-top: 10px;
     }
+
+    header.digit-header-content {
+      text-align: center;
+    }
   }
 
   .buttonClassName {
